[package]
name = "constraint-crdt"
version = "0.1.0"
edition = "2021"
description = "CRDT-backed constraint states for distributed fleet consensus"
license = "MIT"
repository = "https://github.com/SuperInstance/constraint-crdt"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
