[package]
name = "constraint-crdt"
version = "0.4.0"
edition = "2021"
description = "CRDT-backed constraint states for distributed fleet consensus"
license = "MIT"
repository = "https://github.com/SuperInstance/constraint-crdt"
keywords = ["crdt", "constraint", "distributed", "consensus", "fleet"]
categories = ["data-structures", "concurrency"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
plato = ["reqwest"]

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "json"]
optional = true

[dev-dependencies]

[[bin]]
name = "constraint-crdt"
path = "src/main.rs"
